--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 server:
   servlet:
     # 项目contextPath，一般在正式发布版本中，我们不配置
-    context-path: /
+    context-path: /gee
     # session最大超时时间(分钟)，默认为30
     session:
       timeout: 60m
@@ -183,15 +183,15 @@ ueditor:
 spring:
   profiles: dev
   datasource:
-      name : geekcattle
+      name : geekcattle_dev
       username  : root
-      password  : root
-      url : jdbc:mysql://localhost:3306/geekcattle?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      password  : root1234
+      url : jdbc:mysql://47.92.210.37:3306/geekcattle?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
   redis:
     database : 0
-    host : 127.0.0.1
+    host : 47.92.210.37
     port : 6379
-    password : Hao123
+    password :
 
 server:
   port: 8000
