--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,8 +1,8 @@
 #  ˝æ›ø‚≈‰÷√
 jdbc.driverClass = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/geekcattle
+jdbc.url = jdbc:mysql://47.92.210.37:3306/geekcattle_dev
 jdbc.username = root
-jdbc.password =root
+jdbc.password =root1234
 
 #c3p0
 jdbc.maxPoolSize=50
