--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -203,15 +203,15 @@ server:
 spring:
   profiles: pro
   datasource:
-      name : geekcattle
+      name : geekcattle_dev
       username  : root
-      password  : root
-      url : jdbc:mysql://localhost:3306/geekcattle?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+      password  : root1234
+      url : jdbc:mysql://localhost:3306/geekcattle_dev?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
   redis:
       database : 0
       host : 127.0.0.1
       port : 6379
-      password : Test123
+      password :
 server:
   port: 8000
 
